--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -161,40 +161,55 @@ aside {
 }
 
 /* forms */
+
 input, textarea, select, .uneditable-input {
-	border: 1px solid #bbb;
-	width: 100%;
-	margin-bottom: 15px;
-	@include box_sizing;
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
 }
+
 input {
-	height: auto !important;
+  height: auto !important;
 }
 
 #error_explanation {
-	color: red;
-	ul {
-		color: red;
-		margin: 0 0 30px 0;
-	}
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
 }
 
 .field_with_errors {
-	@extend .has-error;
-	.form-control {
-		color: $state-danger-text;
-	}
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
 }
 
-checkbox {
-	margin-top: -10px;
-	margin-bottom: 10px;
-	span { margin-left: 20px;
-		font-weight: normal;
-	}
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
 }
 
 #session_remember_me {
-	width: auto;
-	margin-left: 0;
+  width: auto;
+  margin-left: 0;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+    li {
+      overflow: auto;
+      padding: 10px 0;
+      border-bottom: 1px solid $gray-lighter;
+    }
 }
